UserScript Fixes / Stability Improvements
- update userscripts exclusively in background to prevent multiple update overlaps
- fix "No suggestions" font size issue
- catch and ignore errors in message service send to prevent crashes when the listening end simply wasn't open (messages are non-critical)

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -20,3 +20,8 @@ body {
   scrollbar-width: thin;
   scrollbar-color: var(--color-background) var(--color-background-dark);
 }
+
+.monaco-editor {
+  /* Fix overflowing "No suggestions" box. */
+  font-size: 13px;
+}
